first pass at a generic implementation
